--- a/settings.json
+++ b/settings.json
@@ -33,22 +33,17 @@
                 "hidden": false
             },
             {
-                "acrylicOpacity" : 0.75,
-                "background" : "#000000",
+                "guid" : "{00000000-0000-0000-0000-000000012345}",
                 "closeOnExit" : true,
                 "colorScheme" : "Campbell",
                 "commandline" : "\"%PROGRAMFILES%\\git\\bin\\bash.exe\" --login -i -l",
                 "cursorColor" : "#FFFFFF",
                 "cursorShape" : "bar",
-                "fontFace" : "Consolas",
-                "fontSize" : 10,
-                "guid" : "{00000000-0000-0000-0000-000000012345}",
+                "fontFace" : "Consolas",  
                 "historySize" : 9001,
                 "icon" : "%PROGRAMFILES%\\git\\mingw64\\share\\git\\git-for-windows.ico",
                 "name" : "Git Bash",
-                "padding" : "0, 0, 0, 0",
-                "snapOnInput" : true,
-                "useAcrylic" : true
+                "snapOnInput" : true
             },
             {
                 "guid": "{b453ae62-4e3d-5e58-b989-0a998ec441b8}",
@@ -59,27 +54,6 @@
         ]
     },
     "schemes": [
-        {
-            "name": "Vintage",
-            "foreground": "#C0C0C0",
-            "background": "#000",
-            "black": "#000000",
-            "red": "#800000",
-            "green": "#008000",
-            "yellow": "#808000",
-            "blue": "#000080",
-            "purple": "#800080",
-            "cyan": "#008080",
-            "white": "#C0C0C0",
-            "brightBlack": "#808080",
-            "brightRed": "#FF0000",
-            "brightGreen": "#00FF00",
-            "brightYellow": "#FFFF00",
-            "brightBlue": "#0000FF",
-            "brightPurple": "#FF00FF",
-            "brightCyan": "#00FFFF",
-            "brightWhite": "#FFFFFF"
-        },
         {
             "name": "Retro",
             "background": "#000000",
@@ -100,27 +74,6 @@
             "red": "#00ff00",
             "white": "#00ff00",
             "yellow": "#00ff00"
-        },
-        {
-            "name" : "Dracula",
-            "background" : "#272935",
-            "black" : "#21222C",
-            "blue" : "#BD93F9",
-            "cyan" : "#8BE9FD",
-            "foreground" : "#F8F8F2",
-            "green" : "#50FA7B",
-            "purple" : "#FF79C6",
-            "red" : "#FF5555",
-            "white" : "#F8F8F2",
-            "yellow" : "#FFB86C",
-            "brightBlack" : "#6272A4",
-            "brightBlue" : "#D6ACFF",
-            "brightCyan" : "#A4FFFF",
-            "brightGreen" : "#69FF94",
-            "brightPurple" : "#FF92DF",
-            "brightRed" : "#FF6E6E",
-            "brightWhite" : "#F8F8F2",
-            "brightYellow" : "#FFFFA5"
         }
     ],
     "keybindings":
